# wavy_tunnel_bot

./: .env  .gitignore  README.md  backtest-sample.txt  code_document.xml  config.py  current_freeze.txt  environment.txt  environment_info.txt  generate_code_document.py  main-test.txt  main.py  market_hours.py  new_specific_files_document.txt  note-tests.py  packages.txt  pyproject.toml  requirements.txt  scheduler.py  second_script.py  setup.bat  simple_test.py  specific_files_document.txt  tempCodeRunnerFile.py  test.txt  test_live.py  ui.py
backtesting/: backtest.py
csv/: EURUSD_historical_data.csv
ignore_extra_stuff/: Wavy-tunnel-ms3-fix (3).txt  backtest.py  cleanup.py  code.txt  code_document.xml  content.py  generate_code_document.py  output_script.py  test,py  test2.py  test_results.py
jupyter_notebooks/: backtest-notebook.py  full_strategy_conversion.ipynb  requirements.txt  script.py  strategy_conversion.ipynb  text-strategy-breakdown.txt
metatrader/: __init__.py  connection.py  data_retrieval.py  indicators.py  trade_management.py
strategy/: #content of backtesting.backtest.py  __init__.py  old_tunnel_strategy.py  trade_logic.py  tunnel_strategy copy.py  tunnel_strategy.py
test/: advanced_test.py  ema-test-live-no-trailing.py  ema_test_live_no_trail_no_take_profit.py  latest_test.py  liquidity_level_analysis_live.py  multi_time_frame_live.py  peak_and_dip_test_live.py  secondary_strategy_live.py  simple_test.py  system_monitor.py  take_profit_live_test.py  test.py
tests/: test_indicators.py  test_strategy.py  test_trade_management.py
(+43 files in other folders)
